# youtube-analytics-project

./: pyproject.toml
helper/: youtube_api_manual.py
src/: channel.py
