[tool.poetry]
name = "youtube-analytics"
version = "0.1.0"
description = ""
authors = ["levantic <ilija.yershov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
google-api-python-client = "^2.156.0"
google-auth-oauthlib = "^1.2.1"
build = "^1.2.2.post1"
isodate = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
